<?xml version="1.0"?>
<package format="2">
  <name>path_generator</name>
  <version>0.0.0</version>
  <description>The path_generator package</description>

  <maintainer email="haebum@todo.todo">haebum</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
